--- a/PlatformService/appsettings.json
+++ b/PlatformService/appsettings.json
@@ -5,6 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "CommandService": "http://localhost:6000/api/c/platforms",
+  "CommandService": "http://commands-clusterip-srv:80/api/c/platforms",
   "AllowedHosts": "*"
 }
