Added ScreenShots folder.

--- a/K8S/mssql-plat-depl.yaml
+++ b/K8S/mssql-plat-depl.yaml
@@ -1,59 +1,63 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: sqledge-deployment
+  name: mssql-depl
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: sqledge
+      app: mssql
   template:
     metadata:
       labels:
-        app: sqledge
+        app: mssql
     spec:
-      volumes:
-        - name: sqldata
-          persistentVolumeClaim:
-            claimName: mssql-data
       containers:
-        - name: azuresqledge
-          image: mcr.microsoft.com/azure-sql-edge:latest
+        - name: mssql
+          image: mcr.microsoft.com/mssql/server:2017-latest
           ports:
             - containerPort: 1433
-          volumeMounts:
-            - name: sqldata
-              mountPath: /var/opt/mssql
           env:
-            - name: MSSQL_PID
-              value: "Developer"
-            - name: ACCEPT_EULA
-              value: "Y"
-            - name: SA_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: mssql
-                  key: SA_PASSWORD
-            - name: MSSQL_AGENT_ENABLED
-              value: "TRUE"
-            - name: MSSQL_COLLATION
-              value: "SQL_Latin1_General_CP1_CI_AS"
-            - name: MSSQL_LCID
-              value: "1033"
-      terminationGracePeriodSeconds: 30
-      securityContext:
-        fsGroup: 10001
+          - name: MSSQL_PID
+            value: "Express"
+          - name: ACCEPT_EULA
+            value: "Y"
+          - name: SA_PASSWORD
+            valueFrom:
+              secretKeyRef:
+                name: mssql
+                key: SA_PASSWORD
+          volumeMounts:
+          - mountPath: /var/opt/mssql/data
+            name: mssqldb
+      volumes:
+      - name: mssqldb
+        persistentVolumeClaim:
+          claimName: mssql-claim
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: sqledge-deployment
+  name: mssql-clusterip-srv
 spec:
+  type: ClusterIP
   selector:
-    app: sqledge
+    app: mssql
   ports:
-    - protocol: TCP
-      port: 1433
-      targetPort: 1433
-      name: sql
+  - name: mssql
+    protocol: TCP
+    port: 1433
+    targetPort: 1433
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: mssql-loadbalancer
+spec:
   type: LoadBalancer
+  selector:
+    app: mssql
+  ports:
+  - protocol: TCP
+    port: 1433
+    targetPort: 1433
