--- a/K8S/local-pvc.yaml
+++ b/K8S/local-pvc.yaml
@@ -1,21 +1,10 @@
-apiVersion: storage.k8s.io/v1
-kind: StorageClass
-metadata:
-  name: azure-disk
-provisioner: kubernetes.io/azure-disk
-parameters:
-  storageaccounttype: Standard_LRS
-  kind: managed
----
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: mssql-data
-  annotations:
-    volume.beta.kubernetes.io/storage-class: azure-disk
+  name: mssql-claim
 spec:
   accessModes:
-  - ReadWriteOnce
+    - ReadWriteMany
   resources:
     requests:
-      storage: 8Gi
+      storage: 200Mi
