Created Azure SQL Edge deploy on Kubernetes and clusterIP port for it.

--- a/K8S/mssql-plat-depl.yaml
+++ b/K8S/mssql-plat-depl.yaml
@@ -14,12 +14,12 @@ spec:
     spec:
       containers:
         - name: mssql
-          image: mcr.microsoft.com/mssql/server:2017-latest
+          image: mcr.microsoft.com/azure-sql-edge:latest
           ports:
             - containerPort: 1433
           env:
           - name: MSSQL_PID
-            value: "Express"
+            value: "Developer"
           - name: ACCEPT_EULA
             value: "Y"
           - name: SA_PASSWORD
