--- a/PlatformService/appsettings.json
+++ b/PlatformService/appsettings.json
@@ -6,5 +6,8 @@
     }
   },
   "CommandService": "http://commands-clusterip-srv:80/api/c/platforms",
+  "ConnectionStrings": {
+    "PlatformConn" : "Server=mssql-clusterip-srv,1433;User ID=sa;Password=Pa55w0rd!"
+  },
   "AllowedHosts": "*"
 }
