PlatformService - Created Dto and Service for MessageBus

--- a/PlatformService/appsettings.json
+++ b/PlatformService/appsettings.json
@@ -9,5 +9,7 @@
   "ConnectionStrings": {
     "PlatformConn" : "Server=mssql-clusterip-srv,1433;User ID=sa;Password=Pa55w0rd!"
   },
+  "RabbitMqHost": "rabbitmq-clusterip-srv",
+  "RabbitMqPort": "5672",
   "AllowedHosts": "*"
 }
