--- a/PlatformService/appsettings.Development.json
+++ b/PlatformService/appsettings.Development.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "CommandService": "http://localhost:6000/api/c/platforms"
+  "CommandService": "http://localhost:6000/api/c/platforms",
+  "ConnectionStrings": {
+    "PlatformConn" : "Server=mssql-clusterip-srv,1433;User ID=sa;Password=Pa55w0rd!"
+  },
+  "RabbitMqHost": "localhost",
+  "RabbitMqPort": "5672"
 }
